fix mobile spacing

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,7 +14,7 @@
 }
 
 .container {
-    padding-top: 12rem;
+    padding-top: 10rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-auto-flow: row;
@@ -47,12 +47,16 @@
     justify-content: flex-end;
 }
 
-@media (max-width: 768px) { 
+@media (max-width: 768px) {
     .container {
+        padding-top: 0rem;
         grid-template-columns: 1fr;
     }
 
-    .t1, .t2, .t3, .t4 {
+    .t1,
+    .t2,
+    .t3,
+    .t4 {
         grid-column: 1 / span 1;
     }
 }
